# Data_analysis_notebooks

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.code_quality/: ruff.toml
.github/actions/python-poetry-env/: action.yml
.github/workflows/: automerge.yml  ci.yml  dependencies.yml  docs.yml  labels.yml  pre-commit_autoupdate.yml  test.yml
data/datasets/: 20newsgroups-cats.csv  Bike_Sharing_Demand.csv  bike_sharing_date.csv  corazon_data.csv  datos_credito_alemania.csv  datos_credito_alemania_data.csv  results.csv
notebooks/: 02-analisis_salarios_colombia.ipynb  Covid19_Visualizacion_es.ipynb  Covid19_Visualizacion_es_v1.ipynb  Covid19_Visualizacion_v3.ipynb  README.md
notebooks/01-Covid19_visualization/: 01-Covid19_Visualizacion_es.ipynb
notebooks/02-Salarios_colombia/: 02-analisis_salarios_colombia.ipynb
notebooks/Ejercicios_curso_python_ciencia_datos/: 1-Practica_Python.ipynb  2-Practica_Numpy.ipynb  3-Practica_Pandas.ipynb  4-Practica_Visualizacion.ipynb  5-practica-MachineLearning.ipynb  Practica_Limpieza_Texto.ipynb  README.md
referencias/: Plantilla-Liquidador-nomina.xlsx  Retesalarios Procedimiento 2 (jun) año 2023.xls  nomina-en-excel.xlsm
src/app/calc/: calculadora.py
src/app/data_process/: procesamiento.py
src/update_covid_plots/: Covid19_BarChartRace_update.py  Covid19_update.py  fib.py
tests/app/: test_con_fixtures.py
tests/app/calc/: test_calculadora.py  test_calculadora_clase.py  test_excepciones.py  test_parametrizado.py
tests/app/data_process/: test_procesamiento.py
tests/update_covid_plots/: test_fib.py
