[tool.poetry]
name = "Data analysis notebooks with python"
version = "0.1.0"
description = "Data analysis notebooks with python"
authors = ["Jose R. Zapata"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.1.1"
pandas = "^2.1.4"
numpy = "^1.26.3"
pyarrow = "^15.0.0"
chart-studio = "^1.1.0"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

# Standardized Developer Workflow Orchestration
cruft = {extras = ["pyproject"], version = "^2.15.0"} # Automated Cookiecutter template synchronization
jupyter = "^1.0.0"
matplotlib = "^3.8.2"
plotly = "^5.18.0"
seaborn = "^0.13.2"
ipywidgets = "^8.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.virtualenvs]
in-project = true
