[tool.poetry]
name = "Data analysis notebooks with python"
version = "0.1.0"
description = "Data analysis notebooks with python"
authors = [
    "Jose R. Zapata <https://joserzapata.github.io/>",
]
readme = "README.md"
documentation = "https://JoseRZapata.github.io/Data_analysis_notebooks"
repository = "https://github.com/JoseRZapata/Data_analysis_notebooks"

package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
hydra-core = "^1.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

# Standardized Developer Workflow Orchestration
cruft = {extras = ["pyproject"], version = "^2.15.0"} # Automated Cookiecutter template synchronization

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.virtualenvs]
in-project = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
