[project]
name = "Data_analysis_notebooks"
version = "0.2.0"
description = "Data analysis notebooks with python"
authors = [{ name = "Jose R. Zapata", email = "https://joserzapata.github.io/" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "numpy>=2.2.1",
    "pandas>=2.2.3",
]

[project.urls]
Repository = "https://github.com/JoseRZapata/Data_analysis_notebooks"
Documentation = "https://JoseRZapata.github.io/Data_analysis_notebooks"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1,<5",
    "pytest>=8.3.4,<9",
    "pytest-cov>=6.0.0,<7",
    "pytest-mock>=3.14.0,<4",
    "cruft[pyproject]>=2.16.0,<3",
    "jupyter>=1.1.1",
    "plotly>=5.24.1",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.virtualenvs]
in-project = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]
